--- a/app/assets/javascripts/homemap.js.erb
+++ b/app/assets/javascripts/homemap.js.erb
@@ -1,12 +1,19 @@
+/*****************************
+ * Carolyn Yang (c) 2014
+ * Do not copy or redistribute
+ */
+
+// Window resizing needs
 var w = window,
     d = document,
     e = d.documentElement,
     g = d.getElementsByTagName('body')[0];
-
+// URL history
 var stateObj;
-
+// Scrolling need
 var isMoving = false;
 
+// Map config object
 var bwConfig = new Object();
 bwConfig.xResolution = 60;
 bwConfig.yResolution = 40;
@@ -23,7 +30,7 @@ var marker;
 function initialize() {
     geocoder = new google.maps.Geocoder();
 
-    var mapStyle = [ { "elementType": "geometry", "stylers": [ { "saturation": -100 } ] },{ "elementType": "labels", "stylers": [ { "saturation": 1 } ] } ];
+    var mapStyle = [ { "featureType": "landscape.man_made", "stylers": [ { "visibility": "off" } ] },{ "featureType": "poi", "stylers": [ { "visibility": "off" } ] },{ "featureType": "transit", "stylers": [ { "visibility": "off" } ] },{ "featureType": "landscape.natural", "stylers": [ { "color": "#fcfcfc" } ] },{ },{ "featureType": "road", "stylers": [ { "saturation": -100 } ] },{ "featureType": "water", "stylers": [ { "color": "#daedff" } ] },{ "elementType": "labels", "stylers": [ { "lightness": 26 } ] },{ } ];
     var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
 
     var mapOptions = {
@@ -62,21 +69,37 @@ function loadScript() {
 
 $( document ).ready(function() {
     updateWindow();
+    setupBox();
+    moveBoxToIndex(1); // 0 based index
     setupNavLinkClick();
     setupFormsAndLinks();
     loadScript();
-    //setupScroll();
-
 });
 
+//
+function setupBox(){
+    width = window.innerWidth;
+    height = window.innerHeight;
+    // Setup each box to match page
+    $(".box").height(height);
+    $(".box").width(width);
+    $(".boxpanel").height(height*$(".box").length);
+}
 
-function setupScroll(){
-    if (document.addEventListener) {
-        document.addEventListener("mousewheel", MouseWheelHandler, false); //IE9, Chrome, Safari, Oper
-        document.addEventListener("wheel", MouseWheelHandler, false); //Firefox
-    } else {
-        document.attachEvent("onmousewheel", MouseWheelHandler); //IE 6/7/8
-    }
+function moveBoxToIndex(targetIndex)
+{
+    height = window.innerHeight;
+
+    $( ".boxpanel" ).animate({
+        top : - targetIndex * height
+    }, 1000);
+
+    var offset = $(".menubuttoncontainer").offset();
+    var buttonHeight = $(".menubutton").first().outerHeight();
+    console.log( buttonHeight );
+    $( ".menuhighlight" ).animate({
+        top : offset.top + buttonHeight * targetIndex
+    }, 1000);
 }
 
 function setupFormsAndLinks(){
@@ -112,18 +135,15 @@ function setupFormsAndLinks(){
         loadPostUrl(data_element);
         history.pushState(stateObj, "post "+data_element, "/l/"+data_element);
     });
-
-    /*
-    $(document).on("submit", "#boxoverlay", function (e) {
-        var $this = $(e.target);
-        $.post($this.attr('action'), $this.serialize(), function (data) {
-            $("#boxoverlay").html(data);
-        }, 'html');
-        return false;
-    });*/
 }
 
 function setupNavLinkClick(){
+    // Main menu on left
+    $(".menubutton").click(function(event){
+        var targetBoxIndex =$(".menubutton").index($(event.target).closest($(".menubutton")));
+        moveBoxToIndex(targetBoxIndex);
+    });
+    // New feed page navigation
     $(".navmid li").click(function(event){
         event.preventDefault();
         url = event.target.href;
@@ -515,7 +535,7 @@ function renderPostGraph(anchorLink, index) {
                 .endAngle(120/180*Math.PI)
                 .value(function() { return 1; });
 
-        var g = nitrite_group.selectAll()
+        var g = arsenic_group.selectAll()
                 .data(pie(plotData))
                 .enter().append("g");
 
@@ -543,6 +563,34 @@ function renderPostGraph(anchorLink, index) {
                 .attr("width", "60")
                 .attr("height", "60");
         console.log(data);
+        // Draw line graph
+        var line_group = vis.append("g");
+
+        // define dimensions of graph
+        var m = [80, 80, 80, 80]; // margins
+        var w = 1000 - m[1] - m[3]; // width
+        var h = 400 - m[0] - m[2]; // height
+
+        var plotdata = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
+
+
+        var x = d3.scale.linear().domain([0, data.length]).range([0, w]);
+
+        var y = d3.scale.linear().domain([0, 10]).range([h, 0]);
+
+
+        var line = d3.svg.line()
+                .x(function (d, i) {
+                    return x(i);
+                })
+                .y(function (d) {
+                    return y(d);
+                });
+        line_group.selectAll("path")
+                .append("path")
+                .attr("d",line(plotdata))
+                .attr("transform", "translate(0,0)");
+
         //set locations
         var address = data["location"];
         geocoder.geocode( { 'address': address}, function(results, status) {
@@ -568,33 +616,9 @@ function updateWindow(){
     y = w.innerHeight|| e.clientHeight|| g.clientHeight;
 	var svg = d3.select("svg");
     svg.attr("width", x).attr("height", y);
+    // Update main stage's box layouts
+    setupBox();
 }
 
-function MouseWheelHandler(e) {
-
-// cross-browser wheel delta
-        e = window.event || e;
-        var delta = Math.max(-1, Math.min(1,
-            (e.wheelDelta || -e.deltaY || -e.detail)));
-        if (!isMoving) { //if theres any #
-            if (delta < 0) {
-                isMoving = true;
-                scrollPage("down");
-            }else{
-                isMoving = true;
-                scrollPage("up");
-            }
-        }
-        return false;
-}
-
-function scrollPage(direction){
-    if(direction == "up")
-    {
-
-    }else{
-
-    }
-}
 
 window.onresize = updateWindow;
