--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,40 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= render 'layouts/navigation' %>
-    <div class="logocontainer">
-      <%= image_tag("logo.png", :alt => "home image", :title => "Click here to return to Home", :id => "logo") %>
-      <div class="logotitle">QUADROP</div>
-      <div class="logosubtitle">
-        P.O. Box 123456<br/>
-        Seattle, WA 98000<br/>
-        www.quadrop.org</div>
+
+    <div class="leftmenu">
+      <div class="logocontainer">
+        <%= image_tag("logo.png", :alt => "home image", :title => "Click here to return to Home", :id => "logo") %>
+        <div class="logotitle">QUADROP</div>
+        <div class="logosubtitle">
+          P.O. Box 123456<br/>
+          Seattle, WA 98000</div>
+      </div>
+      <div class="menuhighlight"> </div>
+      <div class="menubuttoncontainer">
+        <div class="menubutton">
+          <div class="menubuttonicon"></div>
+          <div class="menubuttontext">Our Mission</div>
+        </div>
+        <div class="menubutton">
+          <div class="menubuttonicon"></div>
+          <div class="menubuttontext">Posts</div>
+        </div>
+        <div class="menubutton">
+          <div class="menubuttonicon"></div>
+          <div class="menubuttontext">Request kit</div>
+        </div>
+        <div class="menubutton">
+          <div class="menubuttonicon"></div>
+          <div class="menubuttontext">Export data</div>
+        </div>
+        <div class="menubutton">
+          <div class="menubuttonicon"></div>
+          <div class="menubuttontext">Sign in</div>
+        </div>
+      </div>
     </div>
+
     <main role="main">
        <%= yield %>
     </main>
