--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,23 +22,23 @@
       <div class="menuhighlight"> </div>
       <div class="menubuttoncontainer">
         <div class="menubutton">
-          <div class="menubuttonicon"></div>
+          <div class="menubuttonicon" id="menubuttonmission"></div>
           <div class="menubuttontext">Our Mission</div>
         </div>
         <div class="menubutton">
-          <div class="menubuttonicon"></div>
+          <div class="menubuttonicon" id="menubuttonnews"></div>
           <div class="menubuttontext">Posts</div>
         </div>
         <div class="menubutton">
-          <div class="menubuttonicon"></div>
+          <div class="menubuttonicon" id="menubuttonkit"></div>
           <div class="menubuttontext">Request kit</div>
         </div>
         <div class="menubutton">
-          <div class="menubuttonicon"></div>
+          <div class="menubuttonicon" id="menubuttonexport"></div>
           <div class="menubuttontext">Export data</div>
         </div>
         <div class="menubutton">
-          <div class="menubuttonicon"></div>
+          <div class="menubuttonicon" id="menubuttonsignin"></div>
           <div class="menubuttontext">Sign in</div>
         </div>
       </div>
